--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Shakespear</title>
   </head>
   <body>
-    <header>Speak the language of shakespear</header>
+    <header><span class="title">Speak the language of shakespear</span></header>
 
     <main>
       <textarea
@@ -29,5 +30,6 @@
         as input and converts to Shakespeare English.
       </p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
